--- a/src/app/marker-point/marker-point.component.scss
+++ b/src/app/marker-point/marker-point.component.scss
@@ -66,7 +66,6 @@
 
 .marker svg {
   fill: #2d378a;
-  position: relative;
   animation: markerBounce 2s infinite;
 
   cursor: pointer;
